<resources>
    <string name="app_name">SmartAgent</string>
    <string name="app_chineseName">智慧型經紀人</string>

    <string name="action_settings">Settings</string>

    <!-- User Account System -->
    <string name="title_register_activity">帳號註冊</string>
    <string name="TextView_auto_login">自動登入</string>
    <string name="TextView_forget_account_or_password">忘記密碼 ?</string>
    <string name="title_forgot_user_info">忘記密碼</string>
    <string name="Button_Login">登入</string>
    <string name="Button_Register">註冊</string>
    <string name="Button_Modify">修改帳號或密碼</string>
    <string name="Hint_Account">帳號</string>
    <string name="Hint_Password">密碼</string>
    <string name="Hint_Email">電子信箱</string>
    <string name="FloatingLabel_Account">帳號欄位請輸入5~10個英文或數字</string>
    <string name="FloatingLabel_Password">密碼欄位請輸入5~10個英文或數字</string>
    <string name="FloatingLabel_Email">請輸入常用的電子信箱</string>
    <string name="Query_Title">請選擇要查詢的項目</string>
    <string name="Hint_InputRegisterEMail">請輸入註冊時使用的電子信箱</string>
    <string name="Hint_Result">查詢結果</string>
    <string name="Spinner_Information">電子信箱</string>
    <string name="title_activity_register">RegisterActivity</string>

    <string name="Button_Confirm">確定</string>
    <string name="Button_Query">查詢</string>
    <string name="Button_Cancel">取消</string>
    <string name="Button_Back">返回</string>
    <string name="Button_Copy">複製</string>
    <string name="title_activity_forgot_user_info">ForgotUserInfo</string>
    <string name="title_activity_calendar">CalendarActivity</string>

</resources>
